# datest

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  CLAUDE.md.example  COMMUNITY.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE.md  LINTING_CONFIGURATION.md  Makefile  README.md  datest.toml  debug.py  mkdocs.yml  pyproject.toml
.cursor.example/rules/: 00-quick-reference.mdc  01-project-context.mdc  02-dana-language.mdc  03-development-methodology.mdc  04-coding-standards.mdc  05-testing-guidelines.mdc  06-project-structure.mdc  07-context-aware-dev.mdc  08-error-handling.mdc  09-performance-security.mdc
.github/workflows/: lint.yml  test.yml
datest/: __init__.py  __main__.py  assertions.py  cli.py  config.py  discovery.py  executor.py  models.py  pytest_plugin.py  reporter.py
datest/.design/: 3d-design.md  design.md
docs/.ai-only/: 3d.md  dana.md  functions.md  project.md  roadmap.md  security.md  todos.md  types.md  user-testing.md
docs/.ai-only/templates/: feature-docs.md  function-docs.md  migration.md
docs/.archive/: README.md
docs/.archive/designs_old/: README.md  ast-validation.md  ast.md  functions.md  interpreter.md  ipv-optimization.md  ipv_architecture.md  mcp-a2a-resources.md  parser.md  python-calling-dana.md  repl.md  sandbox.md  system-overview.md  transcoder.md  transformers.md  type-checker.md
docs/.archive/designs_old/core-concepts/: agent.md  architecture.md  capabilities.md  conversation-context.md  execution-flow.md  mixins.md  resources.md  state-management.md
docs/.archive/designs_old/dana/: auto-type-casting.md  design-principles.md  grammar.md  language.md  manifesto.md  overview.md  structs-and-polymorphism.md  syntax.md
docs/.archive/historical-comparisons/: framework-comparison-2024.md
docs/.design/: DESIGN_DOC_TEMPLATE.md  dana-to-python.md  magic_functions.md  modules_and_imports.md  python-to-dana.md  use_statement.md
docs/.design/poet/: README.md  meta_prompting_architecture.md
docs/.design/semantic_function_dispatch/: 01_problem_analysis.md  02_semantic_function_dispatch_design.md  03_struct_type_coercion_enhancement.md  04_implementation_analysis.md  README.md  implementation_plan.md  implementation_tracker.md  semantic_function_dispatch-implementation.md
docs/.design/semantic_function_dispatch/supporting_docs/: grammar_extension_proposal.md
docs/.design/semantic_function_dispatch/test_cases/: test_basic_coercion.na  test_struct_coercion_demo.na
examples/: .gitignore
natest/: __init__.py  __main__.py  cli.py  reporter.py
natest/.design/: 3d-design.md
openssm/core/slm/: base_slm.py
openssm/core/ssm/: rag_ssm.py
openssm/integrations/llama_index/: backend.py  ssm.py
tests/core/ssm/: test_rag_ssm.py
tests/e2e/: test_full_pipeline.py
tests/fixtures/: error_test.na  failing_test.na  simple_test.na
tests/integration/: test_dana_integration.py
tests/unit/: test_assertions.py  test_cli.py  test_config.py  test_discovery.py  test_executor.py  test_models.py  test_pytest_plugin.py  test_reporter.py
tests/utils/: test_prompts.py
