# pyproject.toml - Natest Project Configuration
# Copyright © 2025 Aitomatic, Inc. Licensed under the MIT License.

# =============================================================================
# Build System Configuration
# =============================================================================

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# =============================================================================
# Project Metadata
# =============================================================================

[project]
name = "natest"
version = "0.1.0"
description = "Natest: Pytest-inspired testing framework for Dana, the agent-first neurosymbolic language"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Christopher Nguyen", email = "ctn@aitomatic.com"},
]

# Minimal core dependencies for testing Dana files
dependencies = [
    # Core testing framework
    "pytest>=7.0.0",
    "pytest-asyncio",
    
    # Language processing for .na files
    "lark>=1.0.0",
    
    # Configuration and utilities
    "python-dotenv",
    "pyyaml",
    
    # CLI and output formatting
    "click>=8.0.0",
    "rich>=13.0.0",  # For colored output and formatting
    
    # Basic file handling
    "pathlib2; python_version<'3.4'",
]

# Optional dependency groups
[project.optional-dependencies]
dev = [
    "ruff",           # Fast Python linter
    "mypy",           # Static type checking
    "pre-commit",     # Git hooks for code quality
    "pytest-cov",     # Test coverage reporting
    "build",          # Package building tool
    "twine",          # PyPI upload tool
]

llm = [
    # Optional LLM integration for testing reason() calls
    "openai>=1.0.0",
    "httpx>=0.27.0",
]

docs = [
    # Minimal documentation tools
    "mkdocs",
    "mkdocs-material",
]

# Command-line entry points
[project.scripts]
natest = "natest.cli:main"

# =============================================================================
# Package Configuration
# =============================================================================

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["natest*"]
exclude = ["tests*", "examples*", "docs*", "tmp*"]

[tool.setuptools.package-data]
natest = ["**/*.py", "**/*.lark"]

# =============================================================================
# Code Quality Tools
# =============================================================================

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "B",   # bugbear (common Python gotchas)
    "UP",  # pyupgrade (modern Python features)
]

ignore = [
    "E501",  # Line too long (handled by line-length)
]

exclude = [
    "*.na",           # Dana language files
    ".git",           # Version control
    ".venv",          # Virtual environment
    "natest.egg-info", # Build artifacts
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "test_*.na"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=natest",
    "--cov-report=term-missing",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
